fixed golden empire tag

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <!-- Control buttons -->
         <div id="lm-archive-button-container-restaurant">
           <button class="btn active" onclick="filterSelection('all')"> All</button>
-          <button class="btn" onclick="filterSelection('golden-empire')">Golden Empire</button>
+          <button class="btn" onclick="filterSelection('goldenempire')">Golden Empire</button>
           <button class="btn" onclick="filterSelection('hkfc')">Hong Kong Food City</button>
-          <button class="btn" onclick="filterSelection('sun-world')">Sun World</button>
+          <button class="btn" onclick="filterSelection('sunworld')">Sun World</button>
         </div>
         <div id="lm-archive-button-container-tags">
           <button class="btn-tag" onclick="filterSelection('china')"> China</button>
